# plua

./: .env.example  .env.original  .gitignore  .luarc.json  .project  ARCHITECTURE.md  BAS.fqa  CHANGELOG.md  DEPLOYMENT.md  QA_children.fqa  README.md  UI.fqa  api_server.py  build.py  build_main_standalone.py  build_nuitka.py  build_pyinstaller.py  build_windows.py  build_windows_spec.py  build_zipapp.py  debug_installation.py  debug_ui_update.lua  demo_integration.py  download_windows_build.py  downloaded_wheel_1083.whl  fix_plua_windows.bat  fix_plua_windows.ps1  main.lua  plua.py  plua.spec  pyproject.toml  refresh.py  requirements.txt  requirements_api.txt  run.bat  run.sh  run_tests.py  simple_test.lua  test_clean_exit.lua  test_concurrent_windows.py  (+39 more)
.github/: copilot-instructions.md  copilot-instructions.templ
.github/instructions/: quickapp-dev.instructions.md
.github/prompts/: install-qa-skills.prompt.md
.github/workflows/: build-executables.yml  macos-intel-build.yml  publish-to-pypi.yml  release-pipeline.yml  release.yml  version-bump.yml  windows-build.yml
build_windows/: plua.spec
demos/: QA_basic.lua  QA_http.lua
dev/: HTTPTestQA.lua  HueBridge.lua  QADeviceSync.lua  QATemp.lua  QAUpdate.lua  QuickApps  README.md  TestQA.lua  basic.fqa  box.lua  brorsUI.lua  corErr.lua  cross_platform_test.lua  debug_callbacks.lua  debug_http_request_parser.lua  debug_http_response_format.lua  debug_http_server.lua  debug_http_stress_test.lua  debug_http_test_suite.lua  debug_json.lua  debug_network_utils.lua  debug_timer.py  demo_api_hook.lua  demo_desktop_ui.lua  docs_structure_check.sh  encode.lua  env.lua  eplua_gui_launcher.py  eplua_launcher.py  error.lua  fibaro.lua  fibaro_example.lua  fibaro_new.lua  fibaro_refresh_demo.lua  fibaro_status.lua  final_demo.lua  fix_dev_script_paths.sh  generate_fibaro_api.py  generate_py_docs.lua  hueTest.lua  (+178 more)
dev/test/: .project
dist_test/: plua-1.0.83-py3-none-any.whl  plua-1.0.92-py3-none-any.whl
docs/: ARCHITECTURE-OVERVIEW.md  COROUTINE_LIMITATIONS.md  EventLib_CodeReview.md  EventLib_Documentation.md  FFI_DYNAMIC_LOADING.md  FIBARO_REST.md  LUAFILESYSTEM.md  NETWORK_MODULES.md  PYLIB_STRUCTURE.md  PYfunctions.md  QAs.json  QuickApp.md  README.md  TCP_HTTP_IMPLEMENTATION.md  VSCode.md  WEB_REPL_HTML_EXAMPLES.md  Zerobrane.md  api_server_changes.md  fibaro_api_integration.md  fibaro_flag_usage.md  window_background_control.md
examples/: QA_simple.lua  QA_ui.lua  QAtest.lua  README.md  api_example.lua  auto_terminating_example.lua  browser_window_demo.lua  builtin_modules_test.lua  comprehensive_config_example.lua  config_example.lua  coroutine_test.lua  env_example.lua  example.lua  fibaro_test.lua  http_client_example.lua  http_server_example.lua  http_simp2.lua  json_example.lua  network_demo.lua  repl_demo.lua  repl_demo.py  shared_interpreter_demo.lua  system_config_example.lua  tcp_server_async_demo.lua  tcp_socket_example.lua  tcp_sync_only_demo.lua  test_external_call.lua  test_query_params.lua  timer_async_example.lua  udp_socket_example.lua  websocket_example.lua  websocket_server_example.lua
extensions/: __init__.py  core.py  custom_extensions.py  html_extensions.py  network_extensions.py  web_server.py  websocket_extensions.py
lua/: README.md  fibaro.lua  network_utils.lua  socket.lua  utils.lua
plua/: __init__.py  embedded_api_server.py  interpreter.py  version.py
scripts/: BUILDING.md  README.md  build_macos_intel.py  build_main_standalone.py  build_nuitka.py  build_nuitka_ci.py  build_pyinstaller.py  build_windows.py  build_zipapp.py  create-docs-pdf.sh  create-release.sh  create_release.sh  measure_startup_improvement.py  nuitka-crash-report.xml  optimize_windows_startup.py  simple-pdf.sh  test_release_builds.sh
static/: plua2_main_page.css  plua2_main_page.html  plua2_main_page.js
test/: Children.lua  Color2_3908.lua  QA_A_431.lua  README.md  debug_network.lua  debug_test.lua  libQA.lua  run_plua.py  simple_test.lua  test.env  test_blocking_timeout.lua  test_bundled_files.lua  test_config.lua  test_cwd_config.lua  test_env_vars.lua  test_event_loop.lua  test_fibaro_api.lua  test_home_config.lua  test_integration.py  test_interval.lua  test_interval_simple.lua  test_mobdebug.lua  test_modules.lua  test_mqtt_simple.lua  test_plua_integration.py  test_require.lua  test_restart.lua  test_server.py  test_shutdown.lua  test_simple_timer.lua  test_socket_tcp.lua  test_timer.lua  test_timer_comprehensive.lua  test_timer_debug.lua  test_timer_simple.lua  test_timer_termination.lua  test_udp_read.lua  test_udp_socket.lua  test_websocket.lua  test_with_lib.lua
tests/: __init__.py  test_advanced_network.py  test_api_server.py  test_callbacks.py  test_config.py  test_dotenv.py  test_engine.py  test_file_operations.py  test_interpreter.py  test_net_clients.py  test_network.py  test_performance.py  test_plua_interpreter.py  test_runtime.py  test_timers.py  test_websocket.py
(+299 files in other folders)
